--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MED COMPANY</title>
-    <meta name="description" content="Découvrez une large gamme de produits tendances, de l'électronique aux vêtements, chez MED COMPANY. Commandez dès maintenant et faites-vous plaisir !">
+    <meta name="description" content="Explorez une sélection unique de produits authentiques et culturels chez MED COMPANY. Des vêtements traditionnels aux bijoux artisanaux, en passant par la décoration intérieure et les textiles uniques, trouvez tout ce qu’il vous faut pour allier style et culture. Commandez dès aujourd’hui et célébrez l’élégance africaine !">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
