--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container mx-auto px-4">
             <img src="assets/logo.jpg" alt="Logo d'MED COMPANY" class="mx-auto mb-4 w-24 h-24 rounded-full">
             <h1 class="text-4xl font-bold">MED COMPANY</h1>
-            <p class="mt-2 text-lg">Des produits tendance à portée de main !</p>
+            <p class="mt-2 text-lg">Découvrez chez MED COMPANY des produits authentiques et culturels alliant style et tradition africaine. Commandez dès maintenant!</p>
         </div>
     </header>
 
